[gd_scene load_steps=12 format=2]

[ext_resource path="res://Ressources/Images/SpaceShip/capital_ship_01.png" type="Texture" id=1]
[ext_resource path="res://Ressources/Images/SpaceShip/Exhaust/exhaust04.png" type="Texture" id=2]
[ext_resource path="res://Ressources/Images/SpaceShip/Exhaust/exhaust2.png" type="Texture" id=3]
[ext_resource path="res://Ressources/Images/SpaceShip/Exhaust/exhaust1.png" type="Texture" id=4]
[ext_resource path="res://Ressources/Images/SpaceShip/Exhaust/exhaust3.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Player/Player.gd" type="Script" id=6]
[ext_resource path="res://Scenes/StateMachine/StateMachine.gd" type="Script" id=7]
[ext_resource path="res://Scenes/Player/States/Idle.gd" type="Script" id=8]
[ext_resource path="res://Scenes/Player/States/Move.gd" type="Script" id=9]

[sub_resource type="CapsuleShape2D" id=1]
radius = 54.2846
height = 574.288

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 2 ) ],
"loop": true,
"name": "Move",
"speed": 8.0
}, {
"frames": [  ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[node name="PlayerCharacter" type="KinematicBody2D"]
script = ExtResource( 6 )
movement_speed_X = 350.0
movement_speed_Y = 200.0

[node name="HitBox" type="CollisionShape2D" parent="."]
rotation = 1.5708
scale = Vector2( 0.42, 0.42 )
shape = SubResource( 1 )

[node name="Thruster0" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "Move"
frame = 1
playing = true
offset = Vector2( -150, 2.5 )

[node name="Thruster1" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "Move"
frame = 1
playing = true
offset = Vector2( -145, -16 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.3, 1.3 )
limit_left = 0
limit_top = 0
limit_right = 9000
limit_bottom = 3000
limit_smoothed = true
smoothing_enabled = true

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 7 )

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 9 )

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 8 )
